Add ScubaManager and VisorManager

--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,6 +61,8 @@
     <Compile Include="SaveAndLoad.cs" />
     <Compile Include="MaleOutfitPieces.cs" />
     <Compile Include="MaleOutfitTemplates.cs" />
+    <Compile Include="ScubaManager.cs" />
+    <Compile Include="VisorManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
