--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -50,19 +50,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BaseClassExtensions\VehicleDoor.cs" />
+    <Compile Include="BaseClassExtensions\Vector3.cs" />
     <Compile Include="Closet.cs" />
     <Compile Include="Debug.cs" />
+    <Compile Include="IDGenerator.cs" />
+    <Compile Include="IPLs\IPLDetails.cs" />
+    <Compile Include="IPLs\IPLLoader.cs" />
+    <Compile Include="Managers\HelmetManager.cs" />
     <Compile Include="RealTimeDuration.cs" />
-    <Compile Include="RespawnManager.cs" />
+    <Compile Include="Managers\RespawnManager.cs" />
     <Compile Include="RestrictedAreas.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="NPC.cs" />
+    <Compile Include="BaseClassExtensions\NPC.cs" />
     <Compile Include="Outfit.cs" />
     <Compile Include="SaveAndLoad.cs" />
     <Compile Include="MaleOutfitPieces.cs" />
     <Compile Include="MaleOutfitTemplates.cs" />
-    <Compile Include="ScubaManager.cs" />
-    <Compile Include="VisorManager.cs" />
+    <Compile Include="Managers\ScubaManager.cs" />
+    <Compile Include="Managers\BigMapManager.cs" />
+    <Compile Include="Managers\SirenManager.cs" />
+    <Compile Include="State.cs" />
+    <Compile Include="BaseClassExtensions\Vehicle.cs" />
+    <Compile Include="Managers\VisorManager.cs" />
+    <Compile Include="XmlDictionary.cs" />
+    <Compile Include="XmlSerialization.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
