--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -52,7 +52,10 @@
   <ItemGroup>
     <Compile Include="BaseClassExtensions\VehicleDoor.cs" />
     <Compile Include="BaseClassExtensions\Vector3.cs" />
-    <Compile Include="Clothes\Closet.cs" />
+    <Compile Include="Clothing\Closet.cs" />
+    <Compile Include="Clothing\MaleOutfitPieces.cs" />
+    <Compile Include="Clothing\MaleOutfitTemplates.cs" />
+    <Compile Include="Clothing\Outfit.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="IDGenerator.cs" />
     <Compile Include="IPLs\IPLDetails.cs" />
@@ -63,9 +66,6 @@
     <Compile Include="Managers\RestrictedAreasManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaseClassExtensions\NPC.cs" />
-    <Compile Include="Clothes\Outfit.cs" />
-    <Compile Include="Clothes\MaleOutfitPieces.cs" />
-    <Compile Include="Clothes\MaleOutfitTemplates.cs" />
     <Compile Include="Managers\ScubaManager.cs" />
     <Compile Include="Managers\BigMapManager.cs" />
     <Compile Include="Managers\SirenManager.cs" />
