--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -80,5 +80,11 @@
     <Compile Include="Managers\VisorManager.cs" />
     <Compile Include="Persistence\JMFDictionary.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Snippets\Python Generation\OutfitProperty.py" />
+    <Content Include="Snippets\Python Generation\OutfitPiece.py" />
+    <Content Include="Snippets\Snippets\OutfitPiece.xml" />
+  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
