--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -72,9 +72,6 @@
     <Compile Include="Managers\RealTimeDurationManager.cs" />
     <Compile Include="Managers\RespawnManager.cs" />
     <Compile Include="Managers\RestrictedAreasManager.cs" />
-    <Compile Include="Persistence\JMFDatabase.cs" />
-    <Compile Include="Persistence\Load.cs" />
-    <Compile Include="Persistence\Save.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaseClassExtensions\NPC.cs" />
     <Compile Include="Managers\ScubaManager.cs" />
@@ -83,7 +80,6 @@
     <Compile Include="State.cs" />
     <Compile Include="BaseClassExtensions\Vehicle.cs" />
     <Compile Include="Managers\VisorManager.cs" />
-    <Compile Include="Persistence\JMFDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="JMF\Presets\Clothing\MaleAccessories.xml" />
@@ -104,6 +100,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="JMF\Presets.db" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\OOD.Collections\OOD.Collections.csproj">
+      <Project>{f8fdff28-a1e4-4b60-bd56-fd76e0541688}</Project>
+      <Name>OOD.Collections</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
