--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -38,17 +38,7 @@
     <Reference Include="ScriptHookVDotNet3">
       <HintPath>..\JaysMod\References\ScriptHookVDotNet3.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Memory, Version=4.0.1.1, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" />
-    <Reference Include="System.Text.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL" />
     <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -57,12 +47,14 @@
     <Compile Include="Clothing\Components\ComponentFunctions.cs" />
     <Compile Include="Clothing\Components\Components.cs" />
     <Compile Include="Clothing\Closet.cs" />
-    <Compile Include="Clothing\OutfitComponent.cs" />
-    <Compile Include="Clothing\Torso.cs" />
+    <Compile Include="Clothing\Components\OutfitComponent.cs" />
+    <Compile Include="Clothing\Components\Legs.cs" />
+    <Compile Include="Clothing\Components\Torso.cs" />
     <Compile Include="Clothing\IOutfitPiece.cs" />
     <Compile Include="Clothing\Presets.cs" />
     <Compile Include="Clothing\Outfit.cs" />
     <Compile Include="Clothing\MaleOutfitPieces.cs" />
+    <Compile Include="Database.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Debug.cs" />
     <Compile Include="IDGenerator.cs" />
