--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -74,24 +74,15 @@
     <Compile Include="Managers\VisorManager.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="JMF\Presets\Clothing\MaleAccessories.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleHairs.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleHands.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleHats.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleLowers.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleMasks.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleNecks.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleOutfits.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleParachutes.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleShirtOverlays.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleShoes.xml" />
-    <Content Include="JMF\Presets\Clothing\MaleVests.xml" />
+    <Content Include="JMF\Presets\Clothing\legs.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="JMF\Presets\Clothing\torso.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Snippets\Python Generation\OutfitProperty.py" />
     <Content Include="Snippets\Python Generation\OutfitPiece.py" />
     <Content Include="Snippets\Snippets\OutfitPiece.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="JMF\Presets.db" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OOD.Collections\OOD.Collections.csproj">
