--- a/JaysMod/packages.config
+++ b/JaysMod/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LemonUI.SHVDN3" version="1.9.4" targetFramework="net48" />
   <package id="Microsoft.Data.Sqlite" version="6.0.0" targetFramework="net48" />
   <package id="Microsoft.Data.Sqlite.Core" version="6.0.0" targetFramework="net48" />
+  <package id="ScriptHookVDotNet3" version="3.5.1" targetFramework="net48" />
   <package id="SQLitePCLRaw.bundle_e_sqlite3" version="2.0.6" targetFramework="net48" />
   <package id="SQLitePCLRaw.core" version="2.0.6" targetFramework="net48" />
   <package id="SQLitePCLRaw.lib.e_sqlite3" version="2.0.6" targetFramework="net48" />
