--- a/OOD.Collections/OOD.Collections.csproj
+++ b/OOD.Collections/OOD.Collections.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Dictionary.cs" />
+    <Compile Include="AlwaysEmptyXMLDatabaseTable.cs" />
     <Compile Include="MemoryXMLDatabaseTable.cs" />
     <Compile Include="XMLDatabaseTable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
