--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -64,6 +64,9 @@
     <Compile Include="Clothing\Outfit.cs" />
     <Compile Include="Clothing\MaleOutfitPieces.cs" />
     <Compile Include="Database.cs" />
+    <Compile Include="Menus\MenuListItem.cs" />
+    <Compile Include="ModuleManager.cs" />
+    <Compile Include="Module.cs" />
     <Compile Include="Framework.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Debug.cs" />
@@ -79,10 +82,10 @@
     <Compile Include="Menus\SubmenuItem.cs" />
     <Compile Include="Menus\MenuItem.cs" />
     <Compile Include="Menus\Menu.cs" />
+    <Compile Include="Modules\BigMapModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaseClassExtensions\NPC.cs" />
     <Compile Include="Managers\ScubaManager.cs" />
-    <Compile Include="Managers\BigMapManager.cs" />
     <Compile Include="Managers\SirenManager.cs" />
     <Compile Include="State.cs" />
     <Compile Include="BaseClassExtensions\Vehicle.cs" />
