--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -88,7 +88,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaseClassExtensions\NPC.cs" />
     <Compile Include="Managers\ScubaManager.cs" />
-    <Compile Include="Managers\SirenManager.cs" />
+    <Compile Include="Modules\SirenModule.cs" />
     <Compile Include="State.cs" />
     <Compile Include="BaseClassExtensions\Vehicle.cs" />
     <Compile Include="Managers\VisorManager.cs" />
