--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -67,8 +67,8 @@
     <Compile Include="Config.cs" />
     <Compile Include="Menus\Aliases.cs" />
     <Compile Include="Menus\MenuListItem.cs" />
-    <Compile Include="ModuleManager.cs" />
-    <Compile Include="Module.cs" />
+    <Compile Include="Modules\ModuleManager.cs" />
+    <Compile Include="Modules\Module.cs" />
     <Compile Include="Framework.cs" />
     <Compile Include="Global.cs" />
     <Compile Include="Debug.cs" />
