chore: reorganize files

--- a/JaysModFramework/JaysModFramework.csproj
+++ b/JaysModFramework/JaysModFramework.csproj
@@ -68,40 +68,40 @@
     <Compile Include="Clothing\Presets.cs" />
     <Compile Include="Clothing\Outfit.cs" />
     <Compile Include="Clothing\MaleOutfitPieces.cs" />
-    <Compile Include="Database.cs" />
-    <Compile Include="Config.cs" />
+    <Compile Include="JMF.Framework\Database.cs" />
+    <Compile Include="JMF.Framework\Config.cs" />
     <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Ped\Ped.cs" />
-    <Compile Include="Game\Game.cs" />
-    <Compile Include="Game\Player.cs" />
+    <Compile Include="JMF.Game\Game.cs" />
+    <Compile Include="JMF.Game\Player.cs" />
     <Compile Include="Menus\Aliases.cs" />
     <Compile Include="Menus\MenuListItem.cs" />
     <Compile Include="Entities\Model.cs" />
-    <Compile Include="Modules\InternalModule.cs" />
-    <Compile Include="Modules\ModuleManager.cs" />
-    <Compile Include="Modules\Module.cs" />
-    <Compile Include="Framework.cs" />
-    <Compile Include="Global.cs" />
-    <Compile Include="Debug.cs" />
-    <Compile Include="IDGenerator.cs" />
+    <Compile Include="JMF.Modules\InternalModule.cs" />
+    <Compile Include="JMF.Modules\ModuleManager.cs" />
+    <Compile Include="JMF.Modules\Module.cs" />
+    <Compile Include="JMF.Framework\Framework.cs" />
+    <Compile Include="JMF.Framework\Global.cs" />
+    <Compile Include="JMF.Framework\Debug.cs" />
+    <Compile Include="JMF.Framework\IDGenerator.cs" />
     <Compile Include="IPLs\IPLDetails.cs" />
     <Compile Include="IPLs\IPLLoader.cs" />
-    <Compile Include="Modules\InteractionMenu.cs" />
+    <Compile Include="JMF.Modules\InteractionMenu.cs" />
     <Compile Include="Managers\HelmetManager.cs" />
     <Compile Include="Managers\IManager.cs" />
-    <Compile Include="Modules\MatterOfTime.cs" />
+    <Compile Include="JMF.Modules\MatterOfTime.cs" />
     <Compile Include="Managers\RespawnManager.cs" />
     <Compile Include="Managers\RestrictedAreasManager.cs" />
     <Compile Include="Menus\SubmenuItem.cs" />
     <Compile Include="Menus\MenuItem.cs" />
     <Compile Include="Menus\Menu.cs" />
-    <Compile Include="Modules\BigMap.cs" />
-    <Compile Include="Natives\NativeFunction.cs" />
-    <Compile Include="Natives\NativeHash.cs" />
+    <Compile Include="JMF.Modules\BigMap.cs" />
+    <Compile Include="JMF.Native\NativeFunction.cs" />
+    <Compile Include="JMF.Native\NativeHash.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="BaseClassExtensions\NPC.cs" />
     <Compile Include="Managers\ScubaManager.cs" />
-    <Compile Include="Modules\SilentSirens.cs" />
+    <Compile Include="JMF.Modules\SilentSirens.cs" />
     <Compile Include="State.cs" />
     <Compile Include="Entities\Vehicle\Vehicle.cs" />
     <Compile Include="Managers\VisorManager.cs" />
